Fixed: Customer User Address Book visibility issues (bug#13160).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -1204,7 +1204,8 @@ iframe.TextOption.Customer {
 
 iframe.TextOption.CustomerUserAddressBook {
     width: 960px;
-    min-height: 600px;
+    min-height: 65vh;
+    max-height: 80vh;
 }
 
 /**
